--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 05:49:00 AM</p>
+    <p class="lastupdate">09/16/2020 05:54:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -62,19 +62,19 @@
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">39.1&#176;F</td>
+        <td class="data">40.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">73%</td>
+        <td class="data">77%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.001 inHg (-0.009)</td>
+        <td class="data">29.999 inHg (-0.012)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph ESE (112&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:04 AM">
             56.8</span><br/>
-          <span title="05:47:35 AM">
-            47.3</span>
+          <span title="05:49:59 AM">
+            47.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:23:25 PM (Monday)">
             92.9</span><br/>
-          <span title="05:47:35 AM (Wednesday)">
-            47.3</span>
+          <span title="05:49:59 AM (Wednesday)">
+            47.2</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="05:47:35 AM" class="loval">
-            47.3</span>
+          <span title="05:49:59 AM" class="loval">
+            47.2</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="05:47:35 AM (Wednesday)" class="loval">
-            47.3</span>
+          <span title="05:49:59 AM (Wednesday)" class="loval">
+            47.2</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/12/2020 07:15:43 AM" class="loval">
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="05:39:51 AM">
-            76</span><br/>
+          <span title="05:51:49 AM">
+            77</span><br/>
           <span title="12:00:04 AM">
             50</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          254
+          251
         </td>
         <td class="data new_row hilo_week">
           2<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 15 hours, 2 minutes</td>
+      <td class="data">14 days, 15 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 15 hours, 2 minutes</td>
+      <td class="data">14 days, 15 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
