--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 08:39:00 AM</p>
+    <p class="lastupdate">09/16/2020 08:44:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">52.0&#176;F</td>
+        <td class="data">52.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">52.0&#176;F</td>
+        <td class="data">52.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">52.0&#176;F</td>
+        <td class="data">52.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">39.0&#176;F</td>
+        <td class="data">40.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">61%</td>
+        <td class="data">62%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.035 inHg (0.036)</td>
+        <td class="data">30.036 inHg (0.036)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NE (45&#176;)</td>
+        <td class="data">1 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="08:28:01 AM">
-            30.036</span><br/>
+          <span title="08:39:01 AM">
+            30.037</span><br/>
           <span title="04:15:00 AM">
             29.996</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          238
+          248
         </td>
         <td class="data new_row hilo_week">
           2<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 17 hours, 52 minutes</td>
+      <td class="data">14 days, 17 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 17 hours, 52 minutes</td>
+      <td class="data">14 days, 17 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
