--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 09:14:00 AM</p>
+    <p class="lastupdate">09/16/2020 09:19:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">56.7&#176;F</td>
+        <td class="data">57.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">56.7&#176;F</td>
+        <td class="data">57.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">56.7&#176;F</td>
+        <td class="data">57.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">43.4&#176;F</td>
+        <td class="data">43.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">61%</td>
+        <td class="data">60%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.038 inHg (0.035)</td>
+        <td class="data">30.042 inHg (0.040)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SSE (158&#176;)</td>
+        <td class="data">1 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">72.6&#176;F</td>
+        <td class="data">72.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:04 AM">
-            56.8</span><br/>
+          <span title="09:18:13 AM">
+            57.5</span><br/>
           <span title="06:54:23 AM">
             46.1</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:04 AM" class="hival">
-            56.8</span>
+          <span title="09:18:13 AM" class="hival">
+            57.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:23:25 PM (Monday)" class="hival">
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="09:13:15 AM">
-            43.7</span><br/>
+          <span title="09:18:13 AM">
+            44.2</span><br/>
           <span title="02:24:06 AM">
             36.5</span>
         </td>
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="09:01:01 AM">
-            30.040</span><br/>
+          <span title="09:18:01 AM">
+            30.042</span><br/>
           <span title="04:15:00 AM">
             29.996</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          341
+          352
         </td>
         <td class="data new_row hilo_week">
           2<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 18 hours, 27 minutes</td>
+      <td class="data">14 days, 18 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 18 hours, 27 minutes</td>
+      <td class="data">14 days, 18 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
