--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 09:34:00 AM</p>
+    <p class="lastupdate">09/16/2020 09:39:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">59.7&#176;F</td>
+        <td class="data">60.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">59.7&#176;F</td>
+        <td class="data">60.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">59.7&#176;F</td>
+        <td class="data">60.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">44.9&#176;F</td>
+        <td class="data">44.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">58%</td>
+        <td class="data">56%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.045 inHg (0.037)</td>
+        <td class="data">30.046 inHg (0.038)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph N (0&#176;)</td>
+        <td class="data">2 mph NE (45&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="09:33:35 AM">
-            59.7</span><br/>
+          <span title="09:38:43 AM">
+            60.6</span><br/>
           <span title="06:54:23 AM">
             46.1</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="09:33:35 AM" class="hival">
-            59.7</span>
+          <span title="09:38:43 AM" class="hival">
+            60.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:23:25 PM (Monday)" class="hival">
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="09:33:35 AM">
-            44.9</span><br/>
+          <span title="09:38:43 AM">
+            45.3</span><br/>
           <span title="02:24:06 AM">
             36.5</span>
         </td>
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="09:26:01 AM">
-            30.045</span><br/>
+          <span title="09:38:01 AM">
+            30.046</span><br/>
           <span title="04:15:00 AM">
             29.996</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          1
+          7
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 18 hours, 47 minutes</td>
+      <td class="data">14 days, 18 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 18 hours, 47 minutes</td>
+      <td class="data">14 days, 18 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
