--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 10:04:00 AM</p>
+    <p class="lastupdate">09/16/2020 10:09:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">63.8&#176;F</td>
+        <td class="data">64.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">63.8&#176;F</td>
+        <td class="data">64.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">63.8&#176;F</td>
+        <td class="data">64.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.8&#176;F</td>
+        <td class="data">47.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.036 inHg (0.019)</td>
+        <td class="data">30.032 inHg (0.016)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph N (0&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">73.1&#176;F</td>
+        <td class="data">73.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">34%</td>
+        <td class="data">35%</td>
       </tr>
     </tbody>
   </table>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:03:49 AM">
-            63.8</span><br/>
+          <span title="10:08:57 AM">
+            64.6</span><br/>
           <span title="06:54:23 AM">
             46.1</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="10:03:49 AM" class="hival">
-            63.8</span>
+          <span title="10:08:57 AM" class="hival">
+            64.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:23:25 PM (Monday)" class="hival">
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="09:59:43 AM">
-            46.9</span><br/>
+          <span title="10:08:57 AM">
+            47.6</span><br/>
           <span title="02:24:06 AM">
             36.5</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          20
+          21
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -505,8 +505,8 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="05:00:00 AM">
-            34</span><br/>
+          <span title="10:08:01 AM">
+            35</span><br/>
           <span title="12:00:04 AM">
             32</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 19 hours, 17 minutes</td>
+      <td class="data">14 days, 19 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 19 hours, 17 minutes</td>
+      <td class="data">14 days, 19 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
