--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/20/2020 12:09:00 AM</p>
+    <p class="lastupdate">09/20/2020 12:14:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -62,19 +62,19 @@
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.4&#176;F</td>
+        <td class="data">53.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">68%</td>
+        <td class="data">69%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.868 inHg (-0.001)</td>
+        <td class="data">29.868 inHg (-0.002)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">5 mph N (0&#176;)</td>
+        <td class="data">5 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -235,14 +235,14 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:16 AM">
-            53.6</span><br/>
+          <span title="12:13:12 AM">
+            53.8</span><br/>
           <span title="12:08:48 AM">
             53.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:00:16 AM (Sunday)">
-            53.6</span><br/>
+          <span title="12:13:12 AM (Sunday)">
+            53.8</span><br/>
           <span title="12:08:48 AM (Sunday)">
             53.3</span>
         </td>
@@ -269,14 +269,14 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:04 AM">
-            68</span><br/>
+          <span title="12:13:12 AM">
+            69</span><br/>
           <span title="12:00:04 AM">
             68</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:00:04 AM (Sunday)">
-            68</span><br/>
+          <span title="12:13:12 AM (Sunday)">
+            69</span><br/>
           <span title="12:00:04 AM (Sunday)">
             68</span>
         </td>
@@ -440,15 +440,15 @@
         </td>
         <td class="data new_row hilo_day">
           5<br/>
-          3
+          7
         </td>
         <td class="data new_row hilo_week">
           5<br/>
-          3
+          7
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          239
+          240
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">18 days, 9 hours, 22 minutes</td>
+      <td class="data">18 days, 9 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">18 days, 9 hours, 22 minutes</td>
+      <td class="data">18 days, 9 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
